manifests/vgr-backend_canary_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vgr-backend-canary
  labels:
    app: vgr-backend-canary
spec:
  replicas: 0
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: vgr-backend-canary
      track: stable
  template:
    metadata:
      labels:
        app: vgr-backend-canary
        track: stable
    spec:
      volumes:
      containers:
      - name: vgr-backend-canary
        image: ernestk86/vgr-backend-canary:latest
        ports:
        - containerPort: 8885
        imagePullPolicy: Always
