manifests/vgr-backend_prod_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vgr-backend
  labels:
    app: vgr-backend
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: vgr-backend
      track: stable
  template:
    metadata:
      labels:
        app: vgr-backend
        track: stable
    spec:
      volumes:
      containers:
      - name: vgr-backend
        image: ernestk86/vgr-backend:production
        ports:
        - containerPort: 8880
        imagePullPolicy: Always
