manifests/loki-external.yml
apiVersion: v1
kind: Service
metadata:
  name: loki
spec:
  type: ExternalName
  externalName: loki.default.svc.cluster.local
  clusterIP:
  ports:
  - port: 3100
    protocol: TCP
    targetPort: 3100

#eyJrIjoiZjdmMDExNzdhMzQyZjYwM2E0YmYwZjNiNDQwNTBjY2FiZWVmNDlmZCIsIm4iOiJ2Z3ItYmFja2VuZCIsImlkIjo1MDE0OTJ9
