manifests/vgr-backend_prod_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: vgr-backend
  labels:
    app: vgr-backend
spec:
  selector:
    app: vgr-backend
  ports:
  - name: http
    protocol: TCP
    port: 8880
    targetPort: 8880
  type: ClusterIP
