manifests/vgr-backend_canary_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vgr-backend-canary-ingress 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /vgr-backend-canary/?(.*)
        backend:
          serviceName: vgr-backend-canary
          servicePort: 8885
